static/css/main.css
html {
  overflow-y: scroll;
}

body {
  padding-top: 50px;
  padding-bottom: 20px;
}

.nav.nav-side ul {
  list-style-type: none;
}

ul.nav.nav-side > li > ul {
  padding-left: 10px;
}


.nav.nav-side li.active > a {
  font-weight: bold;
}

a.navbar-brand {
  padding-top: 10px;
}

.sidelinks {
  float: right;
  margin-top: -20px;
  margin-right: -15px;
}

.sidelinks > ul {
  list-style: none;
  padding: 0;
}

.sidelinks > ul > li {
  display: inline-block;
  padding: 0.3em 1em;
  background-color: #f5f5f5;
}

span.monospaced {
  letter-spacing: 0;
  padding: .1em .5ex;
  word-spacing: -.15em;
  background-color: #f7f7f8;
  -webkit-border-radius: 4px;
  font-family: "Droid Sans Mono","DejaVu Sans Mono",monospace;
}

img {
   margin: 5px;
}

/* Main page */
.jumbotron {
  color: white;
}

.jumbotron > h1 {
  margin-top: 18px;
  margin-bottom: 10px;
}

.jumbotron p {
  font-size: 18px;
  max-width: 600px;
}

@media screen and (min-width: 768px){
    .jumbotron h1 {
        font-size: 41px;
    }

    .jumbotron {
    	padding-top: 5px;
  	padding-left: 30px;
  	padding-right: 30px;
    }
}

.page-header {
    margin: 40px 0 0;
    border-bottom: none;
}

.buttons {
  width: 200px;
}

/* Google search */
#search-box {
  width: 350px;
  margin-top: 9px;
  margin-bottom: 0px;
}
input.gsc-input,
.gsc-input-box,
.gsc-input-box-hover,
.gsc-input-box-focus,
.gsc-search-button {
  box-sizing: content-box; 
  line-height: normal;
  font-size: 13px !important;
}

input.gsc-search-button:hover, input.gcs-search-button:focus {
  border-color: #708a29 !important;
  background-color: #708a29 !important;
}

input.gsc-search-button-v2 {
  margin-top: 3px !important;
}

.gsib_a {
  padding-left: 8;
  padding-right: 8;
  padding-top: 3;
  padding-bottom: 0;
}

.gsc-search-box table {
  background: transparent;
}

/* Firefox specific hack */
@-moz-document url-prefix() {
  .gsib_a {
    padding: inherit !important;
  }
}

